se comento le codigo y el nombre de los autores

--- a/frontend/src/css/Casouser.css
+++ b/frontend/src/css/Casouser.css
@@ -1,3 +1,4 @@
+/* Este bloque de código define las propiedades CSS de los elementos que tengan la clase "row". */
 .row{
   height: 255px;
   width: auto;
