--- a/frontend/src/css/nadvar.css
+++ b/frontend/src/css/nadvar.css
@@ -1,91 +1,72 @@
 .navbar {
-    background-color: #fff;
-    padding: 0.5rem 1rem;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    z-index: 9999;
-  }
+  background-color: transparent;
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.2rem;
+  width: 100%;
+  transition: all 0.3s ease-in-out;
+  z-index: 10;
+}
+
+.scroll-nav {
+  background-color: #fff;
+  box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.1);
+}
+
+.navbar-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 80px;
+  z-index: 1;
+  width: 100%;
+  max-width: 1300px;
+  margin: 0 auto;
+  padding: 0 50px;
+}
+
+.navbar-logo {
+  color: #fff;
+  justify-self: flex-start;
+  cursor: pointer;
+  text-decoration: none;
+  font-size: 2rem;
+  display: flex;
+  align-items: center;
+}
+
+.navbar-logo img {
+  width: 120px;
+  height: auto;
   
-  .navbar-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  
-  .logo img {
-    height: 40px;
-  }
-  
-  .menu-icon {
-    display: none;
-  }
-  
-  .menu {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-  }
-  
-  .menu li {
-    margin-right: 1.5rem;
-  }
-  
-  .menu a {
-    text-decoration: none;
-    color: #333;
-    font-size: 1.1rem;
-    transition: color 0.3s ease-in-out;
-  }
-  
-  .menu a:hover {
-    color: #f7df1e;
-  }
-  
-  @media (max-width: 768px) {
-    .menu-icon {
-      display: block;
-      font-size: 1.5rem;
-      cursor: pointer;
-    }
-  
-    .menu {
-      display: none;
-      position: absolute;
-      top: 70px;
-      left: 0;
-      width: 100%;
-      background-color: #1e1e1e;
-      padding: 1rem 0;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-      z-index: 999;
-    }
-  
-    .menu li {
-      margin: 0;
-    }
-  
-    .menu a {
-      display: block;
-      padding: 0.5rem 1rem;
-      font-size: 1rem;
-      color: #fff;
-      text-align: center;
-    }
-  
-    .menu a:hover {
-      background-color: #f7df1e;
-      color: #1e1e1e;
-    }
-  
-    .menu.active {
-      display: flex;
-      flex-direction: column;
-    }
-  }
-  
+}
+
+.nav-menu {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  list-style: none;
+  text-align: center;
+  margin-right: -22px;
+}
+
+.nav-item {
+  height: 80px;
+}
+
+.nav-links {
+  color: #000;
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  padding: 0 1rem;
+  height: 100%;
+  cursor: pointer;
+}
+
+.nav-links:hover {
+  color: #3b3b3b;
+  transition: all 0.2s ease-in-out;
+}
